# oas2pdf

./: .gitignore  Cargo.toml  README.md  askama.toml  rustfmt.toml
.github/workflows/: ci.yml
samples/: docker.yaml  request-body.yaml  several-methods.yaml
src/: args.rs  main.rs  sample_tests.rs  transform_schema.rs  typst_world.rs
src/snapshots/: oas2pdf__sample_tests__docker_api.snap  oas2pdf__sample_tests__request_body.snap  oas2pdf__sample_tests__several_methods.snap  oas2pdf__test__custom_template.snap  oas2pdf__test__typst_template.snap
templates/: output.tex  output.typ
