[package]
name = "oas2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_escape = "0.10.3"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
indexmap = "2.6.0"
openapiv3-extended = "6.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
typst = "0.12.0"
typst-kit = { version = "0.12.0", features = ["embed-fonts", "fonts"] }
typst-pdf = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev.package."*"]
opt-level = 3
