[package]
name = "oas2pdf"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["David Young"]
repository = "https://github.com/sciguy16/oas2pdf"
description = "Create PDF documentation from OpenAPI schemas"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
indexmap = "2.6.0"
openapiv3-extended = "6.0.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tera = "1.20.0"
typst = "0.13.1"
typst-kit = { version = "0.13.1", features = ["embed-fonts", "fonts"] }
typst-pdf = "0.13.1"

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
rand = "0.9"

[profile.dev.package."*"]
opt-level = 2

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
